# COMP371_dockerimage

./: .gitattributes  .gitmodules  Dockerfile.comp371  README.md  build_docker.ps1  build_docker.sh  check_path.sh  delete_container.ps1  delete_container.sh  get_ip.ps1  interactive_run.ps1  interactive_run.sh  rebuild.ps1  rebuild.sh  run.ps1  run.sh  utils.sh
docker/: CMakeLists.txt  build.sh  build_and_run.sh
linux/: delete_image.sh  interactive_run.sh  rebuild.sh  run.sh
windows/: delete_container.ps1  delete_image.ps1  interactive_run.ps1  rebuild.ps1  run.ps1  utils.ps1
